# tox-github-action

./: README.md  action.yaml  pyproject.toml
.github/workflows/: main.yml  this-repo.yml
test/: test.py
