[build-system]
requires = [ "setuptools >= 44", "wheel >= 0.34.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py39,py310,py311,py312,py313,py314,py314t,pypy2,pypy3
skipsdist = True

[testenv]
deps = pytest >= 3.0.0
commands = pytest test/test.py
"""
